<resources>
    <string name="app_name">Click`s</string>
    <string name="Storage">Storage</string>
    <string name="score">312</string>
    <string name="bright">brightness</string>
    <string name="sound">volume</string>
    <string name="upgrades">Upgrades</string>
    <string name="perclick">+1\n per click</string>
    <string name="imcombo">improve\n combo</string>
    <string name="imcrit">improve\n crit</string>
    <string name="sounds">Sound</string>
    <string name="skin">Skin</string>
    <string name="connect">Connect</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="space"> </string>
    <string name="o">●</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="action_settings">BT</string>
</resources>