<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/act2_edit"
        android:layout_width="309dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/upgrades"
        android:textColor="@color/colorFont"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ToggleButton
        android:id="@+id/combo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_background"
        android:text="@string/imcombo"
        android:textAllCaps="false"
        android:textColor="@color/colorFont"
        android:textOff="@string/imcombo"
        android:textOn="@string/imcombo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act2_edit"
        app:layout_constraintVertical_bias="0.019" />

    <ToggleButton
        android:id="@+id/perclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_background"
        android:text="@string/perclick"
        android:textAllCaps="false"
        android:textColor="@color/colorFont"
        android:textOff="@string/perclick"
        android:textOn="@string/perclick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act2_edit"
        app:layout_constraintVertical_bias="0.019" />

    <ToggleButton
        android:id="@+id/crit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_background"
        android:text="@string/imcrit"
        android:textAllCaps="false"
        android:textColor="@color/colorFont"
        android:textOff="@string/imcrit"
        android:textOn="@string/imcrit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act2_edit"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/sounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sounds"
        android:textColor="@color/colorFont"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crit"
        app:layout_constraintVertical_bias="0.031" />

    <ToggleButton
        android:id="@+id/_2"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline_background"
        android:text="@string/_2"
        android:textColor="@color/colorFont"
        android:textOff="@string/_2"
        android:textOn="@string/_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sounds"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_4"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_4"
        android:textColor="@color/colorFont"
        android:textOff="@string/_4"
        android:textOn="@string/_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_8"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_8"
        android:textColor="@color/colorFont"
        android:textOff="@string/_8"
        android:textOn="@string/_8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_5"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_6"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_6"
        android:textColor="@color/colorFont"
        android:textOff="@string/_6"
        android:textOn="@string/_6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/_5"
        app:layout_constraintTop_toBottomOf="@+id/_3"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_9"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_9"
        android:textColor="@color/colorFont"
        android:textOff="@string/_9"
        android:textOn="@string/_9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/_8"
        app:layout_constraintTop_toBottomOf="@+id/_6"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_7"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_7"
        android:textColor="@color/colorFont"
        android:textOff="@string/_7"
        android:textOn="@string/_7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_8"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_5"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_5"
        android:textColor="@color/colorFont"
        android:textOff="@string/_5"
        android:textOn="@string/_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_2"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/_1"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_1"
        android:textColor="@color/colorFont"
        android:textOff="@string/_1"
        android:textOn="@string/_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_2"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sounds"
        app:layout_constraintVertical_bias="0.035" />

    <ToggleButton
        android:id="@+id/_3"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/outline_background"
        android:text="@string/_3"
        android:textColor="@color/colorFont"
        android:textOff="@string/_3"
        android:textOn="@string/_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toEndOf="@+id/_2"
        app:layout_constraintTop_toBottomOf="@+id/sounds"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:gravity="center"
        android:text="@string/skin"
        android:textColor="@color/colorFont"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_8"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/button6"
        android:layout_width="209dp"
        android:layout_height="204dp"
        android:background="@drawable/gradient_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skin"
        app:layout_constraintVertical_bias="0.255" />


</android.support.constraint.ConstraintLayout>